# ofi

./: .gitignore  OFI.ipynb  README.md  pyproject.toml  research_log.md  research_plan.md  test_ofi_fix.py
configs/: data.yaml  strategy.yaml  universe.yaml
jq_strategy/: PERFORMANCE_NOTES.md  strategy.py  strategy_optimized.py
my_jq_strategy/tools/: bundle.py
notebooks/: 00_sanity_check.ipynb  01_build_minute_ofi.ipynb  02_predictability.ipynb  OFI.ipynb
reports/: DAY4_STEP1_CHANGES.md  DAY4_STEP2_CHANGES.md  DAY4_SUMMARY.md  day3_ofi_signal.md  day3_ofi_signal_enhanced.md  final_report.md  one_pager.md
reports/tables/: day3_quality_report.md
scripts/: build_ofi_features.py  verify_ofi_data.py
src/: ofi.py
src/backtest/: metrics.py
src/features/: ofi.py
src/ofi/: __init__.py  __main__.py  clean.py  evaluate.py  features_ofi.py  io.py  paths.py  pipeline.py
src/utils/: time.py
